@@ -3,7 +3,7 @@
  * XRDDEFAULT.C - Default external state retention routines for Nagios
  *
  * Copyright (c) 1999-2007 Ethan Galstad (nagios@nagios.org)
- * Last Modified: 10-19-2007
+ * Last Modified: 10-21-2007
  *
  * License:
  *
@@ -345,6 +345,7 @@ int xrddefault_save_state_information(void){
 		fprintf(fp,"\tmodified_attributes=%lu\n",(temp_host->modified_attributes & ~host_attribute_mask));
 		fprintf(fp,"\tcheck_command=%s\n",(temp_host->host_check_command==NULL)?"":temp_host->host_check_command);
 		fprintf(fp,"\tcheck_period=%s\n",(temp_host->check_period==NULL)?"":temp_host->check_period);
+		fprintf(fp,"\tnotification_period=%s\n",(temp_host->notification_period==NULL)?"":temp_host->notification_period);
 		fprintf(fp,"\tevent_handler=%s\n",(temp_host->event_handler==NULL)?"":temp_host->event_handler);
 		fprintf(fp,"\thas_been_checked=%d\n",temp_host->has_been_checked);
 		fprintf(fp,"\tcheck_execution_time=%.3f\n",temp_host->execution_time);
@@ -412,6 +413,7 @@ int xrddefault_save_state_information(void){
 		fprintf(fp,"\tmodified_attributes=%lu\n",(temp_service->modified_attributes & ~service_attribute_mask));
 		fprintf(fp,"\tcheck_command=%s\n",(temp_service->service_check_command==NULL)?"":temp_service->service_check_command);
 		fprintf(fp,"\tcheck_period=%s\n",(temp_service->check_period==NULL)?"":temp_service->check_period);
+		fprintf(fp,"\tnotification_period=%s\n",(temp_service->notification_period==NULL)?"":temp_service->notification_period);
 		fprintf(fp,"\tevent_handler=%s\n",(temp_service->event_handler==NULL)?"":temp_service->event_handler);
 		fprintf(fp,"\thas_been_checked=%d\n",temp_service->has_been_checked);
 		fprintf(fp,"\tcheck_execution_time=%.3f\n",temp_service->execution_time);
@@ -480,6 +482,8 @@ int xrddefault_save_state_information(void){
 		fprintf(fp,"\tmodified_attributes=%lu\n",(temp_contact->modified_attributes & ~contact_attribute_mask));
 		fprintf(fp,"\tmodified_host_attributes=%lu\n",(temp_contact->modified_host_attributes & ~contact_host_attribute_mask));
 		fprintf(fp,"\tmodified_service_attributes=%lu\n",(temp_contact->modified_service_attributes & ~contact_service_attribute_mask));
+		fprintf(fp,"\thost_notification_period=%s\n",(temp_contact->host_notification_period==NULL)?"":temp_contact->host_notification_period);
+		fprintf(fp,"\tservice_notification_period=%s\n",(temp_contact->service_notification_period==NULL)?"":temp_contact->service_notification_period);
 		fprintf(fp,"\tlast_host_notification=%lu\n",temp_contact->last_host_notification);
 		fprintf(fp,"\tlast_service_notification=%lu\n",temp_contact->last_service_notification);
 		fprintf(fp,"\thost_notifications_enabled=%d\n",temp_contact->host_notifications_enabled);
@@ -1158,12 +1162,27 @@ int xrddefault_read_state_information(void){
 								temp_timeperiod=find_timeperiod(val);
 								temp_ptr=(char *)strdup(val);
 
-								if(temp_command!=NULL && temp_ptr!=NULL){
+								if(temp_timeperiod!=NULL && temp_ptr!=NULL){
 									my_free(&temp_host->check_period);
 									temp_host->check_period=temp_ptr;
 								        }
 								else
 									temp_host->modified_attributes-=MODATTR_CHECK_TIMEPERIOD;
+							        }
+						        }
+						else if(!strcmp(var,"notification_period")){
+							if(temp_host->modified_attributes & MODATTR_NOTIFICATION_TIMEPERIOD){
+
+								/* make sure the timeperiod still exists... */
+								temp_timeperiod=find_timeperiod(val);
+								temp_ptr=(char *)strdup(val);
+
+								if(temp_timeperiod!=NULL && temp_ptr!=NULL){
+									my_free(&temp_host->notification_period);
+									temp_host->notification_period=temp_ptr;
+								        }
+								else
+									temp_host->modified_attributes-=MODATTR_NOTIFICATION_TIMEPERIOD;
 							        }
 						        }
 						else if(!strcmp(var,"event_handler")){
@@ -1393,12 +1412,27 @@ int xrddefault_read_state_information(void){
 								temp_timeperiod=find_timeperiod(val);
 								temp_ptr=(char *)strdup(val);
 
-								if(temp_command!=NULL && temp_ptr!=NULL){
+								if(temp_timeperiod!=NULL && temp_ptr!=NULL){
 									my_free(&temp_service->check_period);
 									temp_service->check_period=temp_ptr;
 								        }
 								else
 									temp_service->modified_attributes-=MODATTR_CHECK_TIMEPERIOD;
+							        }
+						        }
+						else if(!strcmp(var,"notification_period")){
+							if(temp_service->modified_attributes & MODATTR_NOTIFICATION_TIMEPERIOD){
+
+								/* make sure the timeperiod still exists... */
+								temp_timeperiod=find_timeperiod(val);
+								temp_ptr=(char *)strdup(val);
+
+								if(temp_timeperiod!=NULL && temp_ptr!=NULL){
+									my_free(&temp_service->notification_period);
+									temp_service->notification_period=temp_ptr;
+								        }
+								else
+									temp_service->modified_attributes-=MODATTR_NOTIFICATION_TIMEPERIOD;
 							        }
 						        }
 						else if(!strcmp(var,"event_handler")){
@@ -1500,7 +1534,37 @@ int xrddefault_read_state_information(void){
 							temp_contact->last_service_notification=strtoul(val,NULL,10);
 					        }
 					if(temp_contact->retain_nonstatus_information==TRUE){
-						if(!strcmp(var,"host_notifications_enabled")){
+						if(!strcmp(var,"host_notification_period")){
+							if(temp_contact->modified_host_attributes & MODATTR_NOTIFICATION_TIMEPERIOD){
+
+								/* make sure the timeperiod still exists... */
+								temp_timeperiod=find_timeperiod(val);
+								temp_ptr=(char *)strdup(val);
+
+								if(temp_timeperiod!=NULL && temp_ptr!=NULL){
+									my_free(&temp_contact->host_notification_period);
+									temp_contact->host_notification_period=temp_ptr;
+								        }
+								else
+									temp_contact->modified_host_attributes-=MODATTR_NOTIFICATION_TIMEPERIOD;
+							        }
+						        }
+						else if(!strcmp(var,"service_notification_period")){
+							if(temp_contact->modified_service_attributes & MODATTR_NOTIFICATION_TIMEPERIOD){
+
+								/* make sure the timeperiod still exists... */
+								temp_timeperiod=find_timeperiod(val);
+								temp_ptr=(char *)strdup(val);
+
+								if(temp_timeperiod!=NULL && temp_ptr!=NULL){
+									my_free(&temp_contact->service_notification_period);
+									temp_contact->service_notification_period=temp_ptr;
+								        }
+								else
+									temp_contact->modified_service_attributes-=MODATTR_NOTIFICATION_TIMEPERIOD;
+							        }
+						        }
+						else if(!strcmp(var,"host_notifications_enabled")){
 							if(temp_contact->modified_host_attributes & MODATTR_NOTIFICATIONS_ENABLED)
 								temp_contact->host_notifications_enabled=(atoi(val)>0)?TRUE:FALSE;
 						        }
