@@ -454,6 +454,7 @@ int xsddefault_save_status_data(void){
 		fprintf(fp,"\tmodified_attributes=%lu\n",temp_host->modified_attributes);
 		fprintf(fp,"\tcheck_command=%s\n",(temp_host->host_check_command==NULL)?"":temp_host->host_check_command);
 		fprintf(fp,"\tcheck_period=%s\n",(temp_host->check_period==NULL)?"":temp_host->check_period);
+		fprintf(fp,"\tnotification_period=%s\n",(temp_host->notification_period==NULL)?"":temp_host->notification_period);
 		fprintf(fp,"\tcheck_interval=%f\n",temp_host->check_interval);
 		fprintf(fp,"\tretry_interval=%f\n",temp_host->retry_interval);
 		fprintf(fp,"\tevent_handler=%s\n",(temp_host->event_handler==NULL)?"":temp_host->event_handler);
@@ -522,6 +523,7 @@ int xsddefault_save_status_data(void){
 		fprintf(fp,"\tmodified_attributes=%lu\n",temp_service->modified_attributes);
 		fprintf(fp,"\tcheck_command=%s\n",(temp_service->service_check_command==NULL)?"":temp_service->service_check_command);
 		fprintf(fp,"\tcheck_period=%s\n",(temp_service->check_period==NULL)?"":temp_service->check_period);
+		fprintf(fp,"\tnotification_period=%s\n",(temp_service->notification_period==NULL)?"":temp_service->notification_period);
 		fprintf(fp,"\tcheck_interval=%f\n",temp_service->check_interval);
 		fprintf(fp,"\tretry_interval=%f\n",temp_service->retry_interval);
 		fprintf(fp,"\tevent_handler=%s\n",(temp_service->event_handler==NULL)?"":temp_service->event_handler);
@@ -590,6 +592,8 @@ int xsddefault_save_status_data(void){
 		fprintf(fp,"\tmodified_attributes=%lu\n",temp_contact->modified_attributes);
 		fprintf(fp,"\tmodified_host_attributes=%lu\n",temp_contact->modified_host_attributes);
 		fprintf(fp,"\tmodified_service_attributes=%lu\n",temp_contact->modified_service_attributes);
+		fprintf(fp,"\thost_notification_period=%s\n",(temp_contact->host_notification_period==NULL)?"":temp_contact->host_notification_period);
+		fprintf(fp,"\tservice_notification_period=%s\n",(temp_contact->service_notification_period==NULL)?"":temp_contact->service_notification_period);
 		fprintf(fp,"\tlast_host_notification=%lu\n",temp_contact->last_host_notification);
 		fprintf(fp,"\tlast_service_notification=%lu\n",temp_contact->last_service_notification);
 		fprintf(fp,"\thost_notifications_enabled=%d\n",temp_contact->host_notifications_enabled);
